Fix dropdown toggle for collapse/expand

--- a/app/assets/stylesheets/partials/_invite_admin.scss
+++ b/app/assets/stylesheets/partials/_invite_admin.scss
@@ -39,6 +39,32 @@
       height: 100%;
       display: flex;
 
+      .dropdown {
+        padding: 10px;
+        margin-left: 5px;
+        margin-right: -20px;
+
+        i {
+          transform: rotate(0deg);
+          margin: 0px 8px 2px 8px;
+          @include transition(0.2s);
+          pointer-events: none;
+        }
+
+        &.hidden {
+          visibility: hidden;
+        }
+      }
+
+      &.collapsed {
+        .dropdown {
+          i {
+            transform: rotate(-90deg);
+            @include transition(0.3s);
+          }
+        }
+      }
+
       &:not(.collapsed) {
         background: #fff8e0;
 
@@ -52,20 +78,6 @@
       &:hover {
         background: var(--light);
         @include transition(0.1s);
-      }
-
-      .dropdown {
-        padding: 10px;
-        margin-left: 5px;
-        margin-right: -10px;
-
-        i {
-          font-size: 15px;
-        }
-
-        &.hidden {
-          visibility: hidden;
-        }
       }
 
       .spacer {
@@ -88,20 +100,6 @@
         font-weight: normal;
         font-style: normal;
         cursor: pointer;
-
-        &.collapsed {
-          i {
-            transform: rotate(-90deg);
-            @include transition(0.3s);
-          }
-        }
-
-        i {
-          transform: rotate(0deg);
-          margin: 0px 8px 2px 8px;
-          @include transition(0.2s);
-          pointer-events: none;
-        }
       }
     }
   }
